# memorypool-cpp

./: .gitignore  CMakeLists.txt
include/: ngx_mem_pool.h
src/: ngx_mem_pool.cpp
tests/: comprehensive_test.cpp  testnginxpool.cpp
